--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
 
 @layer components {
   .input-text {
-    @apply w-[350px] outline bg-white mb-3 ml-5 p-1 placeholder:text-gray-300  rounded-sm outline-1 outline-gray-400 focus:outline-red-500 focus:outline-4;
+    @apply w-[350px] outline bg-white ml-5 p-1 placeholder:text-gray-300  rounded-sm outline-1 outline-gray-400 focus:outline-red-500 focus:outline-4;
   }
   .label-input {
-    @apply w-[150px];
+    @apply w-[150px] text-end;
   }
 }
