--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,11 @@
     @apply w-[150px] text-end;
   }
 }
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
